Update security scheme
