# docs/swagger.json
@@ -41,7 +41,12 @@
         },
         "/ingredients": {
             "get": {
-                "description": "List ingredients.\n\nRequire Authentication.",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "List ingredients.",
                 "produces": [
                     "application/json"
                 ],
@@ -65,6 +70,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Create an ingredient.\n\nRequire Admin Role.",
                 "produces": [
                     "application/json"
@@ -174,7 +184,12 @@
         },
         "/recipes": {
             "get": {
-                "description": "List all possible recipes.\n\nRequire Authentication.",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "List all possible recipes.",
                 "consumes": [
                     "application/json"
                 ],
@@ -224,6 +239,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Create recipe.\n\nRequire Admin Role.",
                 "consumes": [
                     "application/json"
@@ -273,7 +293,12 @@
         },
         "/recipes/favorites": {
             "get": {
-                "description": "list the connected user favorite recipes.\n\nRequire Authentication.",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "list the connected user favorite recipes.",
                 "consumes": [
                     "application/json"
                 ],
@@ -314,7 +339,12 @@
         },
         "/recipes/{id}/flag-unflag": {
             "post": {
-                "description": "Add or remove a recipe to your favorites.\n\nRequire Authentication.",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Add or remove a recipe to your favorites.",
                 "consumes": [
                     "application/json"
                 ],
@@ -361,6 +391,11 @@
         },
         "/users": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Create user.\n\nRequire Admin Role.",
                 "consumes": [
                     "application/json"
@@ -410,7 +445,12 @@
         },
         "/users/my-infos": {
             "get": {
-                "description": "Show connected user informations.\n\nRequire Authentication.",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Show connected user informations.",
                 "consumes": [
                     "application/json"
                 ],
@@ -448,7 +488,12 @@
         },
         "/users/password-change": {
             "post": {
-                "description": "Update connected user's password\n\nRequire Authentication",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Update connected user's password",
                 "consumes": [
                     "application/json"
                 ],
@@ -624,6 +669,13 @@
                     "x-order": "3"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT": {
+            "type": "apiKey",
+            "name": "Auth",
+            "in": "cookie"
         }
     }
 }
